@@ -1,0 +1,6 @@
+This module understands the formats used by PostgreSQL for its
+DATE, TIME, TIMESTAMP, and INTERVAL data types. It can be used to
+parse these formats in order to create DateTime or DateTime::Duration
+objects, and it can take a DateTime or DateTime::Duration object
+and produce a string representing it in a format accepted by
+PostgreSQL.
