@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2007/06/10 11:23:14 abs Exp $
