@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1323 2007/06/10 11:20:58 abs Exp $
+$NetBSD: CHANGES-2007,v 1.1324 2007/06/10 11:23:47 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2534,3 +2534,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated misc/p5-Mac-Macbinary to 0.06 [obache 2007-06-10]
 	Updated textproc/p5-Pod-Simple to 3.05 [obache 2007-06-10]
 	Added time/p5-Time-Clock version 0.11 [abs 2007-06-10]
+	Added time/p5-DateTime-Format-Pg version 0.16001 [abs 2007-06-10]
